<resources>
    <string name="app_name">SuperClock</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="alarms">Alarms</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="message_placeholder">Message Here:</string>
    <string name="schedule_alarm">Schedule Alarm</string>
    <string name="alarm_time">Alarm Time:</string>
    <string name="enter_alarm_name_here">Enter Alarm Name here</string>
    <string name="options">Options</string>
    <string name="recurring">Recurring?</string>
    <string name="everyday">Everyday?</string>
    <string name="recurring_alarms">Recurring Alarms</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="alarm_title">Alarm Title:</string>
    <string name="enter_snooze_length_here">Enter Snooze length here</string>
    <string name="off">Off</string>
    <string name="on">On</string>

</resources>
