<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_alarms"
        android:icon="@drawable/ic_alarm_black_24dp"
        android:title="@string/alarms"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/timer"/>


    <item
        android:id="@+id/stopwatch_navigation"
        android:icon="@drawable/ic_stopwatch_black_24dp"
        android:title="@string/stopwatch" />


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>