<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/scheduleAlarmHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/schedule_alarm"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/alarmTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.4"
        android:text="@string/alarm_time"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmTitle" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="269dp"
        android:layout_height="371dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="0.6"
        android:amPmBackgroundColor="@color/red_500"
        android:amPmTextColor="@color/red_200"
        android:background="@color/red_500"
        android:headerBackground="@color/dark_red"
        android:numbersSelectorColor="@color/dark_red"
        android:numbersTextColor="@color/red_200"
        android:timePickerMode="clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/alarmTitle" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alarmTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_alarm_name_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduleAlarmHeading">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/recurringChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checkable="true"
        android:text="@string/options"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:chipIconVisible="true"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker">
    <com.google.android.material.chip.Chip
        android:id="@+id/recurringChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checkable="true"
        android:text="@string/recurring"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:chipIconVisible="true"
        app:closeIconVisible="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />
    <com.google.android.material.chip.Chip
    android:id="@+id/everydayChip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:checkable="true"
    android:text="@string/everyday"
    android:textAppearance="@style/TextAppearance.AppCompat.Small"
    app:chipIconVisible="true"
    app:closeIconVisible="false"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/timePicker" />
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/recurringDaysChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checkable="true"
        android:text="@string/recurring_alarms"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:chipIconVisible="true"
        app:closeIconEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recurringChipGroup"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/sundayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/sunday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mondayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/monday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tuesdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/tuesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/wednesdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/wednesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/thursdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/thursday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fridayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/friday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/saturdayChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/saturday"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:chipIconVisible="true"
            app:closeIconVisible="false" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/alarm_title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/alarm_title"
        app:layout_constraintEnd_toStartOf="@+id/alarmTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleAlarmHeading" />

    <Button
        android:id="@+id/scheduleAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="Schedule Alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>